# FastAPI_REST

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 9408d6fef26e_init.py
src/: schemas.py
src/routes/: contacts.py
